--- a/structured_data.info.yml
+++ b/structured_data.info.yml
@@ -4,5 +4,4 @@ package: SEO
 type: module
 dependencies:
   - drupal:shortcut
-core: 8.x
-core_version_requirement: ^8 || ^9
+core_version_requirement: ^8 || ^9 || ^10
